@@ -16,8 +16,6 @@ import java.io.InputStreamReader;
 import java.io.PrintStream;
 import java.net.ServerSocket;
 import java.net.Socket;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
 import java.util.function.Consumer;
 
 /**
@@ -25,7 +23,6 @@ import java.util.function.Consumer;
  * @author guydu
  */
 public class ExternalCommunicator implements Runnable {
-    private static ExecutorService asyncService = Executors.newVirtualThreadPerTaskExecutor();
 
     public static boolean isMultiplayer = true;
 
@@ -34,6 +31,7 @@ public class ExternalCommunicator implements Runnable {
     public static InputStreamReader inputReader;
     public static BufferedReader bufferdReader;
     public static long partnerTick = 0;
+    public static Thread listenerThread;
 
     public static void initialize(boolean isServer) {
 
@@ -45,13 +43,18 @@ public class ExternalCommunicator implements Runnable {
                 printStream = new PrintStream(socket.getOutputStream()); //output stream is what we are sending
                 inputReader = new InputStreamReader(socket.getInputStream());
                 bufferdReader = new BufferedReader(inputReader);
+                long seed = (long) (Math.random() * 999999999);
+                Main.setRandomSeed(seed);
+                Client.sendMessage("randomSeed:" + seed);
+                System.out.println("setting random seed" + seed);
             } else {
                 socket = new Socket("localhost", 444);
                 printStream = new PrintStream(socket.getOutputStream()); //output stream is what we are sending
                 InputStreamReader ir = new InputStreamReader(socket.getInputStream());
                 bufferdReader = new BufferedReader(ir);
             }
-            Thread.ofPlatform().start(new ExternalCommunicator());
+            listenerThread = new Thread(new ExternalCommunicator());
+            listenerThread.start();
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -65,15 +68,21 @@ public class ExternalCommunicator implements Runnable {
             Client.sendMessage("finished:" + currentTick);
         }
         while (partnerTick < currentTick && currentTick % 1 == 0) {
-            Main.wait(1);
+            // Main.wait(1);
+            try {
+                listenerThread.join(1);
+            } catch (Exception e) {
+                System.out.println("exception joining");
+                Main.wait(1);
+            }
 //            Client.sendMessage("finished:" + currentTick);
         }
     };
 
     @Override
     public void run() {
-        while(true) {
-             try {
+        while (true) {
+            try {
                 // wait for partner to finish tick
                 String nextMessage = bufferdReader.readLine();
                 System.out.println("next message is " + nextMessage);
@@ -106,19 +115,32 @@ public class ExternalCommunicator implements Runnable {
             int y = Integer.parseInt(components[2]);
             long intendedTick = Long.parseLong(components[3]); // this is when the input was actually done
             Coordinate coord = new Coordinate(x, y);
-            System.out.println("issuing order to unit " + id + " to move to " + coord + " on tick " + Window.currentGame.handler.globalTickNumber);
-            GameObject2 go = Window.currentGame.getObjectById(id);
-            if (go instanceof RTSUnit unit) {
-                unit.setDesiredLocation(coord);
-                System.out.println("done");
+            long currentTick = Window.currentGame.handler.globalTickNumber;
+            long tickToIssueOn = intendedTick + 1; // the input handler adds one tick delay for this purpose
+            if(tickToIssueOn <= currentTick) {
+                System.out.println("issuing order to unit " + id + " to move to " + coord + " on tick " + Window.currentGame.handler.globalTickNumber);
+                GameObject2 go = Window.currentGame.getObjectById(id);
+                if (go instanceof RTSUnit unit) {
+                    unit.setDesiredLocation(coord);
+                    System.out.println("done");
+                }
+            } else {
+                Window.currentGame.addTickDelayedEffect((int)(tickToIssueOn - Window.currentGame.handler.globalTickNumber), c->{
+                    System.out.println("issuing order to unit " + id + " to move to " + coord + " on tick " + Window.currentGame.handler.globalTickNumber);
+                    GameObject2 go = Window.currentGame.getObjectById(id);
+                    if (go instanceof RTSUnit unit) {
+                        unit.setDesiredLocation(coord);
+                        System.out.println("done");
+                    }
+                });
             }
         }
     }
 
-    
     private static class Sender implements Runnable {
-        String m ;
-        
+
+        String m;
+
         public Sender(String message) {
             m = message;
         }
